Add verification on attributes LDIF with print on screen with qDebug();

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,7 +26,7 @@
    <string>LDAPtoSMB4 v.0.1</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QTableView" name="tableView">
+   <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -38,6 +38,51 @@
     <property name="styleSheet">
      <string notr="true">background-color: rgb(231, 255, 202);</string>
     </property>
+    <column>
+     <property name="text">
+      <string>NOME</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>CPF</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>SIAPE</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>MATRICULA</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>TELEFONE</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>LOTAÇÃO</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>TA/ALUNO/PROF</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>LOGIN ÚNICO</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>E-MAIL</string>
+     </property>
+    </column>
    </widget>
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
@@ -260,14 +305,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QCheckBox" name="chkMatricula">
+        <widget class="QCheckBox" name="chkCodigoUsuario">
          <property name="font">
           <font>
            <italic>true</italic>
           </font>
          </property>
          <property name="text">
-          <string>Matricula</string>
+          <string>Código do Usuário</string>
          </property>
         </widget>
        </item>
@@ -300,7 +345,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QCheckBox" name="chkTA_Aluno_Prof">
+        <widget class="QCheckBox" name="chkTipoVinculo">
          <property name="font">
           <font>
            <italic>true</italic>
